--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/013/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/013/a/index.xhtml
@@ -19,7 +19,7 @@
 			<div id="contents-area" class="table">
 				<!-- floor 1  -->
 				<div>
-					<button id="print-button" data-bind="click: exportExcel">#{i18n.getText('KMK007_4')}</button>
+					<button tabindex="1" id="print-button" data-bind="click: exportExcel">#{i18n.getText('KMK007_4')}</button>
 				</div>
 				<div>
 					<!-- A1_1 -->
@@ -29,7 +29,7 @@
 						<!-- A1_3 -->
 						<div tabindex="-1" class="panel panel-gray-bg panel-custom-font-size label">#{i18n.getText('KMK013_424')}</div>
 						<!-- A1_4 -->
-						<button tabindex="1" class="btn-area-middle"  data-bind="click: openDialogG">#{i18n.getText('KMK013_425')}</button>
+						<button tabindex="2" class="btn-area-middle"  data-bind="click: openDialogG">#{i18n.getText('KMK013_425')}</button>
 					</div>
 					<!-- A6_1 -->
 					<div class="contents-area-caret-right">
@@ -41,13 +41,13 @@
 						<!-- A2_3 -->
 						<div tabindex="-1" class="panel panel-gray-bg panel-custom-font-size class">#{i18n.getText('KMK013_426')}</div>
 						<!-- A2_4 -->
-						<button tabindex="2" id="a2_4" class="btn-area-middle" data-bind="click: openDialogB">#{i18n.getText('KMK013_427')}</button>
+						<button tabindex="3" id="a2_4" class="btn-area-middle" data-bind="click: openDialogB">#{i18n.getText('KMK013_427')}</button>
 						<!-- A2_5 -->
-						<button tabindex="3" class="btn-area-middle" data-bind="click: openDialogN">#{i18n.getText('KMK013_428')}</button>
+						<button tabindex="4" class="btn-area-middle" data-bind="click: openDialogN">#{i18n.getText('KMK013_428')}</button>
 						<!-- A2_6 -->
-						<button tabindex="4" class="btn-area-middle" data-bind="click: openDialogH">#{i18n.getText('KMK013_429')}</button>
+						<button tabindex="5" class="btn-area-middle" data-bind="click: openDialogH">#{i18n.getText('KMK013_429')}</button>
 						<!-- A2_7 -->
-						<button tabindex="5" class="btn-area-middle" data-bind="enable: enableScrL, click: openDialogL">#{i18n.getText('KMK013_430')}</button>
+						<button tabindex="6" class="btn-area-middle" data-bind="enable: enableScrL, click: openDialogL">#{i18n.getText('KMK013_430')}</button>
 					</div>
 					<!-- A6_2 -->
 					<div class="contents-area-caret-right">
@@ -59,9 +59,9 @@
 						<!-- A3_3 -->
 						<div tabindex="-1" class="panel panel-gray-bg panel-custom-font-size class">#{i18n.getText('KMK013_431')}</div>
 						<!-- A3_4 -->
-						<button tabindex="6" class="btn-area-middle" data-bind="enable: enableScrI, click: openDialogI">#{i18n.getText('KMK013_432')}</button>
+						<button tabindex="7" class="btn-area-middle" data-bind="enable: enableScrI, click: openDialogI">#{i18n.getText('KMK013_432')}</button>
 						<!-- A3_5 -->
-						<button tabindex="7" class="btn-area-middle" data-bind="enable: enableScrD, click: openDialogD">#{i18n.getText('KMK013_433')}</button>
+						<button tabindex="8" class="btn-area-middle" data-bind="enable: enableScrD, click: openDialogD">#{i18n.getText('KMK013_433')}</button>
 					</div>
 				</div>
 				
@@ -77,7 +77,7 @@
 						<!-- A4_3 -->
 						<div tabindex="-1" class="panel panel-gray-bg panel-custom-font-size">#{i18n.getText('KMK013_434')}</div>
 						<!-- A4_4 -->
-						<button tabindex="8" class="btn-area-middle" data-bind="click: openDialogK">#{i18n.getText('KMK013_435')}</button>
+						<button tabindex="9" class="btn-area-middle" data-bind="click: openDialogK">#{i18n.getText('KMK013_435')}</button>
 					</div>
 					<!-- A6_3 -->
 					<div class="contents-area-caret-right">
@@ -89,13 +89,13 @@
 						<!-- A5_3 -->
 						<div tabindex="-1" class="panel panel-gray-bg panel-custom-font-size">#{i18n.getText('KMK013_436')}</div>
 						<!-- A5_4 -->
-						<button tabindex="9" class="btn-area-middle" data-bind="click: openDialogM">#{i18n.getText('KMK013_437')}</button>
+						<button tabindex="10" class="btn-area-middle" data-bind="click: openDialogM">#{i18n.getText('KMK013_437')}</button>
 						<!-- A5_5 -->
-						<button tabindex="10" class="btn-area-middle" data-bind="click: openDialogC">#{i18n.getText('KMK013_438')}</button>
+						<button tabindex="11" class="btn-area-middle" data-bind="click: openDialogC">#{i18n.getText('KMK013_438')}</button>
 						<!-- A5_6 -->
-						<button tabindex="11" class="btn-area-middle" data-bind="click: openDialogJ">#{i18n.getText('KMK013_439')}</button>
+						<button tabindex="12" class="btn-area-middle" data-bind="click: openDialogJ">#{i18n.getText('KMK013_439')}</button>
 						<!-- A5_7 -->
-						<button tabindex="12" class="btn-area-middle" data-bind="click: openDialogE">#{i18n.getText('KMK013_440')}</button>
+						<button tabindex="13" class="btn-area-middle" data-bind="click: openDialogE">#{i18n.getText('KMK013_440')}</button>
 					</div>
 				</div>
 				
