--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/e.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/e.xhtml
@@ -85,7 +85,7 @@
                             <div class="limited-label" data-bind="text: qualificationName"></div>
                         </th>
                         <td>
-                            <input data-bind="ntsNumberEditor: {
+                            <input class="input-amount" data-bind="ntsNumberEditor: {
                                                     name: '#[QMM016_39]',
                                                     value: wageTablePaymentAmount,
                                                     constraint: 'WageTablePaymentAmount',
