--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/h/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/h/index.xhtml
@@ -71,7 +71,7 @@
                     <div class="column-1"
                          data-bind="ntsFormLabel: {required: true}">#{i18n.getText('QMM016_51')}</div>
                     <button style="display: inline-block"
-                            data-bind="ntsHelpButton: {image: '../resource/QMM016_1.png', position: 'bottom left'}">?</button>
+                            data-bind="ntsHelpButton: {image: '../resource/＃QMM017_4.png', position: 'bottom left'}">?</button>
                     <div style = "margin-left: 15px" data-bind="ntsComboBox: {
                         width: '230px',
                         name: '#[QMM016_63]',
