--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/c.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/c.xhtml
@@ -2,7 +2,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:com="http://xmlns.jcp.org/jsf/component"
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
-<div>
+<div style="width: 857px">
     <div class="flex valign-center tab-row">
         <div style="width: 110px;"
              data-bind="ntsFormLabel: {required: false}">#{i18n.getText('QMM016_8')}</div>
@@ -21,15 +21,15 @@
     </div>
     <hr></hr>
     <div class="tab-row">
-        <div style="width: 70px; vertical-align: top"
+        <div style="width: 50px; vertical-align: top"
              data-bind="ntsFormLabel: {required: true}">#{i18n.getText('QMM016_22')}</div>
         <div class="fixed-table-container">
             <table class = "custom-fixed-table normal-fixed-table">
                 <colgroup>
                     <col width="30px"/>
                     <col width="220px"/>
+                    <col width="380px"/>
                     <col width="170px"/>
-                    <col width="90px"/>
                 </colgroup>
                 <thead>
 	                <tr>
@@ -53,18 +53,33 @@
 	                    <td style="text-align: center;"
 	                        data-bind="if: masterNumericClassification() == 1">
 	                        <div data-bind="with: $vm.elementRangeSetting().firstElementRange">
-	                            <input style="width: 20px;" id="C2_8"
-	                                   data-bind="ntsNumberEditor: { required: true, enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(), constraint: 'RangeLowerLimit', value: rangeLowerLimit, name: '#[QMM016_30]'}"/>
+	                            <input id="C2_8" data-bind="ntsNumberEditor: { 
+	                            		required: true, 
+                            			enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(), 
+                            			constraint: 'RangeLowerLimit', 
+                            			value: rangeLowerLimit, 
+                            			name: '#[QMM016_30]', 
+	                            		option: {grouplength: 3, decimallength: 2, width: '143px'}}"/>
 	                            <div style="margin-left: 10px; margin-right: 10px;">#{i18n.getText('QMM016_31')}</div>
-	                            <input style="width: 20px;" id="C2_10"
-	                                   data-bind="ntsNumberEditor: { required: true, enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(), constraint: 'RangeUpperLimit', value: rangeUpperLimit, name: '#[QMM016_32]'}"/>
+	                            <input id="C2_10" data-bind="ntsNumberEditor: { 
+	                            		required: true, 
+	                            		enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(), 
+	                            		constraint: 'RangeUpperLimit', 
+	                            		value: rangeUpperLimit, 
+	                            		name: '#[QMM016_32]', 
+	                            		option: {grouplength: 3, decimallength: 2, width: '143px'}}"/>
 	                        </div>
 	                    </td>
 	                    <td style="text-align: center;"
 	                        data-bind="if: masterNumericClassification() == 1">
 	                        <div data-bind="with: $vm.elementRangeSetting().firstElementRange">
-	                            <input style="width: 20px;" id="C2_11"
-	                                   data-bind="ntsNumberEditor: { required: true, enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(), constraint: 'StepIncrement', value: stepIncrement, name: '#[QMM016_33]'}"/>
+	                            <input id="C2_11" data-bind="ntsNumberEditor: { 
+	                            		required: true, 
+	                            		enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(), 
+	                            		constraint: 'StepIncrement', 
+	                            		value: stepIncrement, 
+	                            		name: '#[QMM016_33]', 
+	                            		option: {grouplength: 3, decimallength: 2, width: '143px'}}"/>
 	                        </div>
 	                    </td>
 	                </tr>
@@ -76,18 +91,33 @@
 	                    <td style="text-align: center;"
 	                        data-bind="if: masterNumericClassification() == 1">
 	                        <div data-bind="with: $vm.elementRangeSetting().secondElementRange">
-	                            <input style="width: 20px;" id="C2_15"
-	                                   data-bind="ntsNumberEditor: { required: true, enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(), constraint: 'RangeLowerLimit', value: rangeLowerLimit, name: '#[QMM016_30]'}"/>
+	                            <input id="C2_15" data-bind="ntsNumberEditor: { 
+	                            		required: true, 
+	                            		enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(), 
+	                            		constraint: 'RangeLowerLimit', 
+	                            		value: rangeLowerLimit, 
+	                            		name: '#[QMM016_30]', 
+	                            		option: {grouplength: 3, decimallength: 2, width: '143px'}}"/>
 	                            <div style="margin-left: 10px; margin-right: 10px;">#{i18n.getText('QMM016_31')}</div>
-	                            <input style="width: 20px;" id="C2_17"
-	                                   data-bind="ntsNumberEditor: { required: true, enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(), constraint: 'RangeUpperLimit', value: rangeUpperLimit, name: '#[QMM016_32]'}"/>
+	                            <input id="C2_17" data-bind="ntsNumberEditor: { 
+	                            		required: true, 
+                            			enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(), 
+                            			constraint: 'RangeUpperLimit', 
+                            			value: rangeUpperLimit, 
+                            			name: '#[QMM016_32]', 
+	                            		option: {grouplength: 3, decimallength: 2, width: '143px'}}"/>
 	                        </div>
 	                    </td>
 	                    <td style="text-align: center;"
 	                        data-bind="if: masterNumericClassification() == 1">
 	                        <div data-bind="with: $vm.elementRangeSetting().secondElementRange">
-	                            <input style="width: 20px;" id="C2_18"
-	                                   data-bind="ntsNumberEditor: { required: true, enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(), constraint: 'StepIncrement', value: stepIncrement, name: '#[QMM016_33]'}"/>
+	                            <input id="C2_18" data-bind="ntsNumberEditor: { 
+	                            		required: true, 
+	                            		enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(), 
+	                            		constraint: 'StepIncrement', 
+	                            		value: stepIncrement, 
+	                            		name: '#[QMM016_33]', 
+	                            		option: {grouplength: 3, decimallength: 2, width: '143px'}}"/>
 	                        </div>
 	                    </td>
 	                </tr>
@@ -127,13 +157,13 @@
                         </div>
 					</th>
 					<th style="padding: 0 0px">
-						<div id="elem2-wrapper" style="width: 500px; overflow-x: hidden; overflow-y: scroll">
+						<div id="elem2-wrapper" style="width: 590px; overflow-x: hidden; overflow-y: scroll">
 							<table id="elem2-table">
 								<tbody>
 					                <tr>
                                         <com:ko bind="$vm.listSecondDimension" tag="foreach">
 					                    	<th class="ui-widget-header" style="height: 32px;">
-					                    		<div style="width: 150px;" data-bind="text: name"></div>
+					                    		<div style="width: 150px;" class="limited-label" data-bind="text: name"></div>
 				                    		</th>
 					                    </com:ko>
 				                    </tr>
@@ -152,14 +182,7 @@
 					                <tr>
 					                    <th class="ui-widget-header" style="height: 32px;">
 					                    	<div style="width: 150px;">
-					                    		<div data-bind="if: $vm.selectedWageTable().elementInformation().oneDimensionElement().masterNumericClassification() == 0">
-							                		<span data-bind="text: masterName"></span>
-							                	</div>
-							                	<div data-bind="if: $vm.selectedWageTable().elementInformation().oneDimensionElement().masterNumericClassification() == 1">
-								                    <span data-bind="text: frameLowerLimit"></span>
-								                    <span>#{i18n.getText('QMM016_31')}</span>
-								                    <span data-bind="text: frameUpperLimit"></span>
-							                    </div>
+					                    		<span class="limited-label" data-bind="text: displayText"></span>
 					                    	</div>
 					                    </th>
 					                </tr>
@@ -168,14 +191,14 @@
 						</div>
 					</td>
 					<td style="padding: 0 0px">
-						<div id="content-wrapper" style="width: 500px; height: 348px; overflow: scroll;">
+						<div id="content-wrapper" style="width: 590px; height: 348px; overflow: scroll;">
 							<table id="content-table">
 								<tbody data-bind="foreach: $vm.wageTableContent().payment">
 					                <tr>
 					                    <com:ko bind="listSecondDms" tag="foreach">
 								            <td style="border: 1px solid #CCC; vertical-align: middle;">
 					 				            <div style="height: 32px; width: 150px; text-align: center;">
-					 				            	<input data-bind="ntsNumberEditor: {
+					 				            	<input class="input-amount" data-bind="ntsNumberEditor: {
 						  								option: { grouplength: 3, width: '120px' }, 
 						   								name: '#[QMM016_39]', 
 						   								value: paymentAmount, 
