--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/006/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/006/a/index.xhtml
@@ -80,7 +80,7 @@
 						<!-- A3_4 -->
 						<div data-bind="ntsFormLabel: { required: true }">#{i18n.getText('QMM006_15')}</div>
 						<!-- A3_5 -->
-						<button tabindex="10" data-bind="click: openDialogQmm006b, timeClick: 500">#{i18n.getText('QMM006_16')}</button>
+						<button tabindex="10" id="A3_5" data-bind="click: openDialogQmm006b, timeClick: 500">#{i18n.getText('QMM006_16')}</button>
 						<!-- A3_6 -->
 						<span class="label" data-bind="text: bankCode" style="padding-left: 20px"></span>
 						<!-- A3_7 -->
@@ -146,13 +146,13 @@
 						<!-- A3_22 -->
 						<span class="label" style="padding-left: 15px">#{i18n.getText('QMM006_21')}</span>
 						<!-- A3_23 -->
-						<input tabindex="15" data-bind="ntsTextEditor: {
+						<input tabindex="15" id="A3_23" data-bind="ntsTextEditor: {
 							name: '#[QMM006_22]',
 							value: entrustorInforCode1,
 							constraint: 'EntrustorCode',
 							required: entrustorInforCode1Required}" />
 						<!-- A3_24 -->
-						<input tabindex="16" data-bind="ntsTextEditor: {
+						<input tabindex="16" id="A3_24" data-bind="ntsTextEditor: {
 							name: '#[QMM006_23]',
 							value: entrustorInforUse1,
 							constraint: 'EntrustorUse',
@@ -162,13 +162,13 @@
 						<!-- A3_25 -->
 						<span class="label" style="padding-left: 205px">#{i18n.getText('QMM006_24')}</span>
 						<!-- A3_26 -->
-						<input tabindex="17" data-bind="ntsTextEditor: {
+						<input tabindex="17" id="A3_26" data-bind="ntsTextEditor: {
 							name: '#[QMM006_25]',
 							value: entrustorInforCode2,
 							constraint: 'EntrustorCode',
 							required: entrustorInforCode2Required}" />
 						<!-- A3_27 -->
-						<input tabindex="18" data-bind="ntsTextEditor: {
+						<input tabindex="18" id="A3_27" data-bind="ntsTextEditor: {
 							name: '#[QMM006_26]',
 							value: entrustorInforUse2,
 							constraint: 'EntrustorUse',
@@ -178,13 +178,13 @@
 						<!-- A3_28 -->
 						<span class="label" style="padding-left: 205px">#{i18n.getText('QMM006_27')}</span>
 						<!-- A3_29 -->
-						<input tabindex="19" data-bind="ntsTextEditor: {
+						<input tabindex="19" id="A3_29" data-bind="ntsTextEditor: {
 							name: '#[QMM006_28]',
 							value: entrustorInforCode3,
 							constraint: 'EntrustorCode',
 							required: entrustorInforCode3Required}" />
 						<!-- A3_30 -->
-						<input tabindex="20" data-bind="ntsTextEditor: {
+						<input tabindex="20" id="A3_30" data-bind="ntsTextEditor: {
 							name: '#[QMM006_29]',
 							value: entrustorInforUse3,
 							constraint: 'EntrustorUse',
@@ -194,13 +194,13 @@
 						<!-- A3_31 -->
 						<span class="label" style="padding-left: 205px">#{i18n.getText('QMM006_30')}</span>
 						<!-- A3_32 -->
-						<input tabindex="21" data-bind="ntsTextEditor: {
+						<input tabindex="21" id="A3_32" data-bind="ntsTextEditor: {
 							name: '#[QMM006_31]',
 							value: entrustorInforCode4,
 							constraint: 'EntrustorCode',
 							required: entrustorInforCode4Required}" />
 						<!-- A3_33 -->
-						<input tabindex="22" data-bind="ntsTextEditor: {
+						<input tabindex="22" id="A3_33" data-bind="ntsTextEditor: {
 							name: '#[QMM006_32]',
 							value: entrustorInforUse4,
 							constraint: 'EntrustorUse',
@@ -210,13 +210,13 @@
 						<!-- A3_34 -->
 						<span class="label" style="padding-left: 205px">#{i18n.getText('QMM006_33')}</span>
 						<!-- A3_35 -->
-						<input tabindex="23" data-bind="ntsTextEditor: {
+						<input tabindex="23" id="A3_35" data-bind="ntsTextEditor: {
 							name: '#[QMM006_34]',
 							value: entrustorInforCode5,
 							constraint: 'EntrustorCode',
 							required: entrustorInforCode5Required}" />
 						<!-- A3_36 -->
-						<input tabindex="24" data-bind="ntsTextEditor: {
+						<input tabindex="24" id="A3_36" data-bind="ntsTextEditor: {
 							name: '#[QMM006_35]',
 							value: entrustorInforUse5,
 							constraint: 'EntrustorUse',
