--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/a_index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/a_index.xhtml
@@ -14,6 +14,7 @@
    			<button class="proceed" tabindex="1" data-bind="click: save, attr : {'disabled' : false}, ">#{i18n.getText('KMF002_2')}</button>
    			<!-- A2_2 -->
    			<button tabindex="2" data-bind="click: settingOfUsageUnit, attr : {'disabled' : isDisableSetUnitBtn}">#{i18n.getText('KMF002_26')}</button>
+   			<button id="print-button_1" data-bind="click: opencdl028Dialog">#{i18n.getText('KSM004_100')}</button>
 		</div>
 		
 		<div id="scrA" class="contents-area" style="padding-right:10px">
