--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/002/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/002/a/index.xhtml
@@ -77,39 +77,41 @@
 						</div>
 					</div>
 					<hr style="min-width: 655px; clear: both"></hr>
-					<div data-bind="with: selectedBankBranch">
-						<div class="branch-info valign-center control-group">
-							<div data-bind="ntsFormLabel: {  required: true, constraint: ['BankBranchCode', 'BankBranchName'] }">#{i18n.getText('QMM002_16')}</div>
-							<input tabindex="13" id="A3_9" data-bind="ntsTextEditor: {
-								name: '#[QMM002_17]',
-								value: code,
-								constraint: 'BankBranchCode',
-								required: true, enable: !$vm.updateMode()}" />
-							<input tabindex="14" id="A3_10" data-bind="ntsTextEditor: {
-								name: '#[QMM002_18]',
-								value: name,
-								constraint: 'BankBranchName',
-								required: true}" />
+					<div data-bind="if: selectedCode().length > 5 || !updateMode()">
+						<div data-bind="with: selectedBankBranch">
+							<div class="branch-info valign-center control-group">
+								<div data-bind="ntsFormLabel: {  required: true, constraint: ['BankBranchCode', 'BankBranchName'] }">#{i18n.getText('QMM002_16')}</div>
+								<input tabindex="13" id="A3_9" data-bind="ntsTextEditor: {
+									name: '#[QMM002_17]',
+									value: code,
+									constraint: 'BankBranchCode',
+									required: true, enable: !$vm.updateMode()}" />
+								<input tabindex="14" id="A3_10" data-bind="ntsTextEditor: {
+									name: '#[QMM002_18]',
+									value: name,
+									constraint: 'BankBranchName',
+									required: true}" />
+							</div>
+							<div class="branch-info valign-center control-group">
+								<div data-bind="ntsFormLabel: { constraint: 'BankBranchNameKana' }">#{i18n.getText('QMM002_19')}</div>
+								<input tabindex="15" data-bind="ntsTextEditor: {
+									name: '#[QMM002_19]',
+									value: kanaName,
+									constraint: 'BankBranchNameKana',
+									required: false}" />
+							</div>
 						</div>
-						<div class="branch-info valign-center control-group">
-							<div data-bind="ntsFormLabel: { constraint: 'BankBranchNameKana' }">#{i18n.getText('QMM002_19')}</div>
-							<input tabindex="15" data-bind="ntsTextEditor: {
-								name: '#[QMM002_19]',
-								value: kanaName,
-								constraint: 'BankBranchNameKana',
-								required: false}" />
-						</div>
-					</div>
-					<hr style="min-width: 655px;"/>
-					<div data-bind="with: selectedBankBranch">
-						<div class="valign-top control-group">
-							<div data-bind="ntsFormLabel: { constraint: 'Memo' }">#{i18n.getText('QMM002_14')}</div>
-							<textarea style="height: 150px" tabindex="16" data-bind="ntsMultilineEditor: {
-								value: memo,
-								name: '#[QMM002_14]',
-								constraint: 'Memo',
-								option: {width: '350px'},
-								readonly: false}" />
+						<hr style="min-width: 655px;"/>
+						<div data-bind="with: selectedBankBranch">
+							<div class="valign-top control-group">
+								<div data-bind="ntsFormLabel: { constraint: 'Memo' }">#{i18n.getText('QMM002_14')}</div>
+								<textarea style="height: 150px" tabindex="16" data-bind="ntsMultilineEditor: {
+									value: memo,
+									name: '#[QMM002_14]',
+									constraint: 'Memo',
+									option: {width: '350px'},
+									readonly: false}" />
+							</div>
 						</div>
 					</div>
 				</div>
