--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/c/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/c/index.xhtml
@@ -13,13 +13,15 @@
    			<button class="proceed" tabindex="1" data-bind="click: save, enable: enableSave">#{i18n.getText('KMF002_2')}</button>
    			<!-- C1_2 -->
    			<button class="danger" tabindex="2" data-bind="click: remove, enable: enableDelete">#{i18n.getText('KMF002_11')}</button>
+   			
+   			<button tabindex="3" id="print-button_d" data-bind="click: opencdl028Dialog4">#{i18n.getText('KSM004_100')}</button>
 		</div>
 		
 		<div id="scrC" class="contents-area fixed-flex-layout">
 			<!-- C4_1 -->
 			<div id="ccgcomponent"></div>
 			<!-- C2_1 -->
-			<div tabindex="3" id="component-items-list" class="fixed-flex-layout-left"></div>
+			<div tabindex="4" id="component-items-list" class="fixed-flex-layout-left"></div>
 			<div id="includeTableMonthlyDay" data-bind="with: commonTableMonthDaySet" class="fixed-flex-layout-right">
 				<ui:include src="../base.xhtml"/>
 			</div>
