--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/e/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/e/index.xhtml
@@ -13,6 +13,9 @@
    			<button class="proceed" tabindex="1" data-bind="click: save, enable: enableSave">#{i18n.getText('KMF002_2')}</button>
    			<!-- E1_2 -->
    			<button class="danger" tabindex="2" data-bind="click: deleteObj, enable: enableDelete">#{i18n.getText('KMF002_11')}</button>
+   			
+   			<button tabindex="3" id="print-button_1" data-bind="click: opencdl028Dialog2">#{i18n.getText('KSM004_100')}</button>
+   			
 		</div>
 		
 		<div id="scrE" class="contents-area" data-bind="with: commonTableMonthDaySet">
