add push func (cps003F)

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/f/cps003.f.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/f/cps003.f.style.css
@@ -173,3 +173,7 @@ div[dropdown-for="pk-amount"] .nts-column {
 	display: block;
 	line-height: 32px;
 }
+
+#func-notifier-errors  {
+	top: 575px !important;
+}
