--- a/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_gridlist.scss
+++ b/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_gridlist.scss
@@ -22,3 +22,8 @@
 .ui-iggrid .nts-gridlist tbody td {
    white-space: pre; 
 }
+.ui-iggrid-tooltip {
+  /* max-width: 500px !important; */
+  display: table;
+  max-width: none !important;
+}
