--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/040/a/qmm040.a.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/040/a/qmm040.a.style.css
@@ -35,3 +35,8 @@
     padding-right: 0;
     padding-left: 4px;
 }
+
+/*fix screen flashing when change tab*/
+.sidebar-content {
+    overflow: inherit;
+}
