--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/d/index.xhtml
@@ -108,7 +108,7 @@
                                 optionsText: 'name',
                                 required: true,
                                 enable: $vm.screenControl().enableD2_5(),
-                                selectFirstIfNull: false,
+                                selectFirstIfNull: true,
                                 columns: [
                                     { prop: 'name', length: 10 },
                                 ]}"/>
@@ -130,7 +130,7 @@
                                 optionsText: 'name',
                                 required: true,
                                 enable: $vm.screenControl().enableD2_8(),
-                                selectFirstIfNull: false,
+                                selectFirstIfNull: true,
                                 columns: [
                                     { prop: 'name', length: 10 },
                                 ]}"/>
