--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/e/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/e/index.xhtml
@@ -112,7 +112,7 @@
                                 optionsText: 'name',
                                 required: true,
                                 enable: $vm.screenControl().enableE2_5(),
-                                selectFirstIfNull: false,
+                                selectFirstIfNull: true,
                                 columns: [
                                     { prop: 'name', length: 10 },
                                 ]}"/>
@@ -134,7 +134,7 @@
                                 optionsText: 'name',
                                 required: true,
                                 enable: $vm.screenControl().enableE2_8(),
-                                selectFirstIfNull: false,
+                                selectFirstIfNull: true,
                                 columns: [
                                     { prop: 'name', length: 10 },
                                 ]}"/>
